cmake_minimum_required(VERSION 3.10)
project(linkedList)
add_executable(game
    ../linked-lists/main.cpp
    ../linked-lists/screen.cpp
    ../linked-lists/tutorialCode/tutorial.cpp
    ../linked-lists/classSelection/classSelection.cpp
    ../linked-lists/characterFiles/character.cpp
     ../linked-lists/StoryScreenCode/storyScreen.cpp
    ../linked-lists/battleScreen/battle.cpp
    ../linked-lists/characterFiles/hero.cpp
    ../linked-lists/characterFiles/enemy.cpp
    ../linked-lists/victoryScreen/victory.cpp
    ../linked-lists/deathScreen/deathScreen.cpp
    
    
)